# finestructure4

./: .gitignore  AUTHORS  COPYING  FinestructureLibrary.R  LICENSE-CP  LICENSE-FS  Makefile.am  README.md  autogen.sh  badpainter.cpp  configure.ac  configure.mac  fs.cpp  fscmds.cpp  fscmds.h  fsconstants.h  fsdonor.cpp  fsdonor.h  fsparam.cpp  fsparam.h  fsproject.cpp  fsproject.h  fssettings.cpp  fssettings.h  fsutils.cpp  fsutils.h  whereisglob
Manual/: default.css  makehelp.sh  manual.tex  sidebar.html
chromocombine/: ChromoCombine.cpp  ChromoCombine.h  ChromoCombineFuns.cpp  ChromoCombineFuns.h
cp/: AUTHORS  ChromoPainterConstants.h  ChromoPainterData.c  ChromoPainterData.h  ChromoPainterDonors.c  ChromoPainterDonors.h  ChromoPainterError.c  ChromoPainterError.h  ChromoPainterFold.c  ChromoPainterFold.h  ChromoPainterInfiles.c  ChromoPainterInfiles.h  ChromoPainterMain.c  ChromoPainterMutEM.c  ChromoPainterMutEM.h  ChromoPainterOutfiles.c  ChromoPainterOutfiles.h  ChromoPainterPar.c  ChromoPainterPar.h  ChromoPainterReading.c  ChromoPainterReading.h  ChromoPainterRecmap.c  ChromoPainterRecmap.h  ChromoPainterSampler.c  ChromoPainterSampler.h  Makefile.am  README  configure.ac  zutil.h
cpfold/: .gitignore  validate_fold.sh
cpfold/oracle/: .gitignore  data.phase  data.recom  expected.txt  id.txt  independent_oracle.py  poplist.txt
examples/example1/: example1.sh  example_cp.ids  example_cp.phase  example_cp.recombfile
examples/example2/: example2.settings  example2.sh
examples/example3/: example_hgdp.sh  fastphase2cp.sh
examples/example4/: FinestructureExample.R  README
finestructure/: Makefile.am  configure.ac  data.cpp  data.h  fines.cpp  fines.h  finesfunctions.cpp  finesfunctions.h  fsxml.cpp  fsxml.h  inf1.cpp  inf1.h  infadmixture.cpp  infadmixture.h  infconcordance.cpp  infconcordance.h  infextract.cpp  infextract.h  infextract2.cpp  infextract2.h  infextract3.cpp  infextract3.h  infextract4.cpp  infextract4.h  infextract5.cpp  infextract5.h  infextractdonors.cpp  infextractdonors.h  infmcmc.cpp  infmcmc.h  prior.cpp  prior.h  rng.cpp  rng.h  state.cpp  state.h
scripts/: arlequin2chromopainter.pl  beagle2chromopainter.pl  convertrecfile.pl  finestructuregreedy.sh  idfileFromFam.pl  ids2fam.pl  ids2ind.pl  idsFromChunkcounts.sh  impute2chromopainter.pl  makeuniformrecfile.pl  msms2cp.pl  phaseremoveunused.pl  phasescreen.pl  phasesubsample.pl  popsFromIds.sh  qsub_array.sh  sbatch_array.sh  transpose.pl  vcf2cp.pl
